# libemail

./: .clang-format  .gitignore  .gitmodules  .projectile  BUILDING  BUILDING.mdown  CERTIFICATES_UPDATE.mdown  CMakeLists.txt  DESIGN.md  IDEAS  LINKS.md  MAXOS-INTEGRATIONS.mdown  PHILOSOFY.mdown  PROTOTYPE.mdown  README.md  ROADMAP.mdown  TEST_CASES  TODO  UI-NOTES.mdown  generate_parser.sh  gmime-superbuild.cmake  liblist.txt  macos_make_build.sh  patch_installed_libs.py  select_embedded_libs_debug.sh  select_embedded_libs_release.sh
playground/: CMakeLists.txt  emailkit_playground_main.cpp
src/Mailer/: .swift-format  Mailer-Bridging-Header.h  MailerAppCore.h  MailerAppCore.mm  MailerCppWrapper.cpp  MailerCppWrapper.hpp  MailerWrapper.mm
src/Mailer/Mailer/: AppDelegate.swift  LoginViewController.swift  LoginViewController_Outcome.swift  LoginViewController_Outcome.xib  LoginWindow.swift  LoginWindowController.swift  LoginWindowController.xib  LoginWindowViewController.swift  LoginWindowViewController.xib  MainWindow.swift  MainWindowController.swift  MainWindowController.xib  MainWindowViewController.swift  MainWindowViewController.xib  ViewController.swift
src/Mailer/Mailer.xcodeproj/: project.pbxproj
src/Mailer/Mailer.xcodeproj/project.xcworkspace/xcuserdata/semkiv.xcuserdatad/: UserInterfaceState.xcuserstate
src/Mailer/Mailer.xcodeproj/xcshareddata/xcschemes/: Mailer.xcscheme
src/Mailer/Mailer.xcodeproj/xcuserdata/semkiv.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/Mailer/Mailer.xcodeproj/xcuserdata/semkiv.xcuserdatad/xcschemes/: xcschememanagement.plist
src/Mailer/Mailer/Base.lproj/: Main.storyboard
src/bin2cpplit/: CMakeLists.txt
src/emailapp-core/: CMakeLists.txt
src/emailapp-core/include/emailapp-core/: emailapp_core.hpp
src/emailapp-core/src/: emailapp_core.cpp  emailapp_core.hpp
src/emailapp-node/: CMakeLists.txt  NOTES.mdown
src/emailapp-node/src/: emailapp_node.cpp
src/emailkit/: CMakeLists.txt
src/emailkit/include/emailkit/: emailkit.hpp  global.hpp  google_auth.hpp  imap_client.hpp  imap_client_types.hpp  imap_parser.hpp  imap_parser_1.hpp  imap_parser__rfc822.hpp  imap_parser_types.hpp  imap_parser_utils.hpp  imap_response_line.hpp  imap_socket.hpp  jsobject.hpp  types.hpp  uri_codec.hpp  utils.hpp
src/emailkit/src/: emailkit.cpp  emailkit.hpp  global.hpp  google_auth.cpp  google_auth.hpp  imap_client.cpp  imap_client.hpp  imap_client_types.cpp  imap_client_types.hpp  imap_parser.c  imap_parser.cpp  imap_parser.h  imap_parser.hpp  imap_parser_1.cpp  imap_parser_1.hpp  imap_parser__rfc822.cpp  imap_parser__rfc822.hpp  imap_parser_apg_impl.c  imap_parser_apg_impl.h  imap_parser_types.cpp  imap_parser_types.hpp  imap_parser_utils.cpp  imap_parser_utils.hpp  imap_response_line.hpp  imap_socket.cpp  imap_socket.hpp  log.hpp  types.cpp  types.hpp  uri_codec.cpp  uri_codec.hpp  utf8_codec.cpp  utf8_codec.hpp  utils.cpp  utils.hpp
src/emailkit/src/grammars/: abnf_grammar.abnf  abnf_grammar.txt  grammar_helper_cpp.txt
src/emailkit/tests/: emailkit-tests_main.cpp  imap_client_tests.cpp  imap_parser_tests.cpp  imap_response_line_tests.cpp  jsobject_test.cpp  newcert.pem  privkey.pem  rfc822_parse_tests.cpp  utils_tests.cpp
src/global/: CMakeLists.txt
src/global/include/emailkit/: global.hpp
src/global/src/: global.cpp
src/http_srv/: CMakeLists.txt
src/http_srv/include/emailkit/: http_srv.hpp
src/http_srv/src/: connection.cpp  connection.hpp  connection_manager.hpp  header.hpp  http_srv.cpp  http_srv.hpp  reply.cpp  reply.hpp  request.hpp  request_parser.cpp  request_parser.hpp
src/log/: CMakeLists.txt
src/log/include/emailkit/: log.hpp
src/log/src/: log.cpp  log.hpp
src/mailer_poc/: CMakeLists.txt  sample_tree.json
src/mailer_poc/include/: mailer_poc.hpp  mailer_poc.hpp.~1~  mailer_ui_state.hpp
src/mailer_poc/src/: mailer_poc.cpp  mailer_poc.hpp  mailer_ui_state.hpp  user_tree.cpp  user_tree.hpp
src/mailer_poc/tests/: mailer_poc_tests.cpp  mailer_poc_tests_main.cpp
src/mailer_poc_cli/: CMakeLists.txt.~1~
src/mailer_poc_cli/src/: mailer_poc_cli.cpp
src/mailer_poc_qt/: CMakeLists.txt  list_view.cpp  list_view.h  list_view_model.cpp  list_view_model.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tree_view.cpp  tree_view.h  tree_view_model.cpp  tree_view_model.h
src/tools/abnf-helper/: CMakeLists.txt
src/tools/abnf-helper/src/: abnf_helper_main.cpp
src/tools/bin2cpplit/: bin2cpplit.cpp
